<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo Deportes</string>
    <string name="action_settings">Configurar</string>
    <string name="saludo">Bienvenido a Todo Deportes</string>
    <string name="descripcionApp">Aquí podrás alquilar las mejores canchas!</string>
    <string name="version">v: 1.0</string>
    <string name="autor">By: \nHernán Velásquez\nGiovani Cardona</string>

    <!-- ACTIVITY MAIN -->
    <string name="iniciaSeccion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="cambiaVista">Cambiar de Vista</string>

    <!-- MainActivity -->
    <string name="vistaAdministrador">Vista Administrador</string>
    <string name="vistaUsuario">Vista Usuario</string>
    <string name="seccionCanchas">Canchas</string>
    <string name="seccionSubtiposCanchas">Subtipo Canchas</string>
    <string name="seccionBusquedas">Busquedas</string>
    <string name="seccionUsuarios">Usuarios</string>
    <string name="seccionReservas">Reservas</string>
    <string name="seccionPagos">Pagos</string>

    <string name="textoDireccion">Dirección: </string>
    <string name="textoCelular">Celular: </string>
    <!--

    <string name="XXX">XXX</string>
    <string name="XXX">XXX</string>
    -->

    <string name="title_activity_registrar_cancha">Nueva Cancha</string>
    <string name="title_activity_registrar_usuario">Nuevo Usuario</string>
    <string name="title_activity_listar_cancha">Canchas</string>
    <string name="hello_world">Hello world!</string>
    <string name="nombre_cancha">Nombre de la cancha</string>
    <string name="titleRegistroCancha">Registrar Cancha</string>
    <string name="saveCancha">Guardar</string>
    <string name="update_canchas">Actualizar</string>
    <string name="search_cancha">Buscar</string>
    <string name="hint_address">Dirección</string>

    <string-array name="arrTipos">
        <item>Elegir Tipo 1</item>
        <item>Elegir Tipo 2</item>
        <item>Elegir Tipo 3</item>

    </string-array>

    <string-array name="arrSubtipos">
        <item>Elegir SubtipoA </item>
        <item>Elegir SubtipoB </item>
        <item>Elegir SubtipoC </item>
        <item>Elegir SubtipoD </item>
    </string-array>

    <!--RegistrarUsuarioActivity-->
    <string name="title_activity_listar_personas">Personas</string>
    <string name="campoNombres">Nombres</string>
    <string name="campoApellido1">Primer Apellido</string>
    <string name="campoApellido2">Segundo Apellido</string>
    <string name="campoIdentificacion">Identificación</string>
    <string name="campoDireccion">Dirección</string>
    <string name="campoTelefono">Teléfono</string>
    <string name="campoTelefonoCelular">Celular</string>
    <string name="textBotonGuardar">Guardar</string>


    <string name="campoEmail">Correo Electrónico</string>
    <string-array name="tipoDocumento">
        <item>Seleccione una opción</item>
        <item>CC - Cedula de Ciudadania</item>
        <item>CE - Cedula de Extrangeria</item>
        <item>TI - Tarjeta de Identidad</item>
        <item>RC - Registro Civil</item>
    </string-array>


    <!--IniciarSesionActivity-->
    <string name="title_activity_iniciar">Iniciar Sesión</string>
    <string name="textConectar">Conectar</string>
    <string name="hintUsuario">Identificación</string>
    <string name="hintContrasena">Contraseña</string>
    <string name="textBotonIniciarSesion">Iniciar Sesión</string>
    <string name="textOlvidoContrasena">¿Olvidaste tu contraseña?</string>

</resources>
