<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".gui.RegistrarUsuarioActivity">

    <ScrollView
        android:id="@+id/scrol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="3"
                android:src="@drawable/img_banner_registro_cancha" />

            <EditText
                android:id="@+id/identificacion"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/campoIdentificacion"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/nombres"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/campoNombres"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/primerApellido"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/campoApellido1"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/segundoApellido"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/campoApellido2"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/dirección"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/campoDireccion"
                android:inputType="text"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/campoTelefono"
                android:inputType="phone"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/campoEmail"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
